--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
       - main
 jobs:
   deploy-to-ec2:
+    needs: unit-test
     runs-on: ubuntu-latest
     steps:
       - name: executing remote ssh commands
